<resources>
    <string name="app_name">Whatsapp Plus</string>
    <string name="new_chat">New contact</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ashfaq">Ashfaq</string>
    <string name="hi">Hi</string>
    <string name="_5_44_am">5:44 am</string>
    <string name="select_contact">Select contact</string>
    <string name="_50_contacts">50 contacts</string>
    <string name="back">back</string>
    <string name="search">search</string>
    <string name="options">options</string>
    <string name="new_contact">New Contact</string>
    <string name="new_group">New group</string>
    <string name="contacts_on_whatsapp">Contacts on Whatsapp</string>
    <string name="at_the_gym">At the gym</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="emojis">emojis</string>
    <string name="camera">Camera</string>
    <string name="attachment">Attachment</string>
    <string name="message">Message</string>
    <string name="online">online</string>
    <string name="end_to_end_encrypted">End-to-end encrypted</string>
    <string name="this_messages_was_deleted">This messages was deleted</string>
    <string name="add_members">Add members</string>
    <string name="group_name">Group name</string>
    <string name="public_String">Public</string>
    <string name="private_string">Private</string>
    <string name="protected_string">Protected</string>
    <string name="group_privacy">Group privacy</string>
    <string name="members">Members:</string>
    <string name="password">Password</string>
    <string name="created_the_group">created the group</string>
    <string name="you_sent_image">%s sent an image</string>
    <string name="msg_token_fmt">FCM Registration token: %1$s\n</string>
    <string name="default_notification_channel_id">default_notification_channel</string>
    <string name="default_notification_channel_name">default_notification</string>
    <string name="fcm_message">This is the FCM notification</string>
    <string name="switching_account">Switching account…</string>
</resources>