<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="@string/back"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_group"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_members"
                android:textColor="@color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="@string/search"
            android:padding="4dp"
            android:src="@drawable/ic_search"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/contacts_on_whatsapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

            <include layout="@layout/chat_item_placeholder" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_arrow_next"
        android:visibility="gone"
        app:circularflow_angles=""
        app:backgroundTint="?attr/colorPrimaryDark"
        app:tint="@color/white"
        android:contentDescription="@string/new_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>