<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:src="@drawable/ic_reply"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:src="@drawable/ic_start"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight=".5"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/img_forward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:contentDescription="@string/options"
            android:padding="8dp"
            android:src="@drawable/ic_forward"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/img_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:contentDescription="@string/options"
            android:padding="8dp"
            android:src="@drawable/ic_options"
            app:tint="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>